# discord.py-win-aiodns

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  diagnose.py  example.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/discord_win_aiodns/: __init__.py
tests/: test_resolver.py
