[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-py-win-aiodns"
version = "0.1.0"
description = "Reliable aiodns resolution for discord.py bots on Windows"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "disnana" }]
keywords = ["aiodns", "asyncio", "discord", "discord.py", "dns", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiodns>=3.6.1,<4; python_version < '3.10'",
    "aiodns>=4.0; python_version >= '3.10'",
    "aiohttp>=3.8",
    "discord.py>=2.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "tomli>=2.0; python_version < '3.11'",
    "twine>=5.1",
]

[project.urls]
Changelog = "https://github.com/disnana/discord.py-win-aiodns-fix/blob/main/CHANGELOG.md"
Issues = "https://github.com/disnana/discord.py-win-aiodns-fix/issues"
Source = "https://github.com/disnana/discord.py-win-aiodns-fix"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
discord_win_aiodns = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["discord_win_aiodns"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
files = ["src"]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
